--- a/index.html
+++ b/index.html
@@ -4,62 +4,268 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech World</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* General Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* Body Styling */
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: #f5f5f5;
+            color: #333;
+            line-height: 1.6;
+            margin: 0;
+        }
+
+        /* Header Styling */
+        header {
+            background: linear-gradient(135deg, #2980b9, #8e44ad);
+            color: white;
+            padding: 20px 0;
+            position: relative;
+            z-index: 1;
+        }
+
+        header .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            text-align: center;
+        }
+
+        header h1 {
+            font-size: 2.8em;
+            font-weight: bold;
+        }
+
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin-top: 20px;
+        }
+
+        nav ul li {
+            display: inline;
+            margin: 0 20px;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s ease;
+        }
+
+        nav ul li a:hover {
+            color: #f39c12;
+        }
+
+        /* Parallax Effect */
+        .parallax {
+            background: url('https://via.placeholder.com/1500x800') no-repeat fixed center;
+            background-size: cover;
+            color: white;
+            padding: 100px 0;
+            text-align: center;
+            position: relative;
+            z-index: 1;
+        }
+
+        .parallax .container {
+            position: relative;
+            z-index: 2;
+        }
+
+        .parallax h2 {
+            font-size: 3em;
+            margin-bottom: 20px;
+        }
+
+        .parallax p {
+            font-size: 1.2em;
+            margin-bottom: 40px;
+        }
+
+        .parallax .cta-button {
+            background-color: #2980b9;
+            color: white;
+            padding: 15px 30px;
+            text-decoration: none;
+            border-radius: 50px;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+        }
+
+        .parallax .cta-button:hover {
+            background-color: #f39c12;
+        }
+
+        /* Section Styling */
+        section {
+            padding: 50px 0;
+            background: #ecf0f1;
+        }
+
+        h2 {
+            font-size: 2.5em;
+            color: #2c3e50;
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        /* Cards for News and Products */
+        .card {
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            margin: 20px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            text-align: center;
+            animation: fadeIn 1s ease-out;
+        }
+
+        .card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
+
+        .card img {
+            max-width: 100%;
+            border-radius: 8px;
+        }
+
+        .card h3 {
+            font-size: 1.5em;
+            color: #2980b9;
+            margin-top: 15px;
+        }
+
+        .card p {
+            font-size: 1em;
+            color: #34495e;
+            margin-top: 10px;
+        }
+
+        /* Footer Styling */
+        footer {
+            background: #333;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            margin-top: 50px;
+        }
+
+        footer a {
+            color: #f39c12;
+            text-decoration: none;
+        }
+
+        /* Animations */
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
+        }
+
+        /* Responsive Design */
+        @media screen and (max-width: 768px) {
+            header h1 {
+                font-size: 2em;
+            }
+
+            nav ul li {
+                display: block;
+                margin: 10px 0;
+            }
+
+            section {
+                padding: 30px 0;
+            }
+
+            .card {
+                margin: 10px 0;
+            }
+
+            .container {
+                padding: 0 20px;
+            }
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to Tech World</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#news">Tech News</a></li>
-                <li><a href="#products">Products</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>Welcome to Tech World</h1>
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#news">Tech News</a></li>
+                    <li><a href="#products">Products</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
-    <section id="home">
-        <h2>Latest in Technology</h2>
-        <p>Stay updated with the latest tech news, gadgets, and breakthroughs in the world of technology.</p>
+    <section id="home" class="parallax">
+        <div class="container">
+            <h2>Discover the Latest in Technology</h2>
+            <p>Stay ahead of the curve with the latest news, products, and trends in the tech world.</p>
+            <a href="#news" class="cta-button">Explore Now</a>
+        </div>
     </section>
 
     <section id="news">
-        <h2>Tech News</h2>
-        <article>
-            <h3>AI Breakthrough in 2025</h3>
-            <p>Artificial intelligence continues to grow at an exponential rate. 2025 is shaping up to be the year of AI dominance...</p>
-        </article>
-        <article>
-            <h3>Quantum Computing Advances</h3>
-            <p>Tech companies are racing to develop quantum computers that will revolutionize industries like healthcare, finance, and cybersecurity...</p>
-        </article>
+        <div class="container">
+            <h2>Tech News</h2>
+            <div class="card">
+                <h3>AI Breakthrough in 2025</h3>
+                <p>Artificial intelligence continues to grow at an exponential rate, with some major breakthroughs expected this year...</p>
+            </div>
+            <div class="card">
+                <h3>Quantum Computing Advances</h3>
+                <p>Tech companies are racing to develop quantum computers that will change the future of industries like healthcare, cybersecurity, and more...</p>
+            </div>
+        </div>
     </section>
 
     <section id="products">
-        <h2>Top Technology Products</h2>
-        <div class="product">
-            <img src="https://via.placeholder.com/300" alt="Smartphone">
-            <h3>Smartphone X Pro</h3>
-            <p>The latest flagship smartphone with cutting-edge features, including a foldable screen and 5G connectivity.</p>
-        </div>
-        <div class="product">
-            <img src="https://via.placeholder.com/300" alt="Laptop">
-            <h3>UltraBook 2025</h3>
-            <p>A sleek, powerful laptop designed for both work and entertainment. With a 16-hour battery life and a 4K display.</p>
+        <div class="container">
+            <h2>Top Technology Products</h2>
+            <div class="card">
+                <img src="https://via.placeholder.com/300" alt="Smartphone">
+                <h3>Smartphone X Pro</h3>
+                <p>The latest smartphone with 5G connectivity, AI-powered features, and a stunning foldable design.</p>
+            </div>
+            <div class="card">
+                <img src="https://via.placeholder.com/300" alt="Laptop">
+                <h3>UltraBook 2025</h3>
+                <p>A sleek and powerful laptop with a long-lasting battery, perfect for both work and play.</p>
+            </div>
         </div>
     </section>
 
     <section id="about">
-        <h2>About Tech World</h2>
-        <p>Tech World is your go-to destination for everything tech-related. From the latest gadgets to in-depth articles about the most recent trends in the tech industry, we bring the world of technology to your fingertips.</p>
+        <div class="container">
+            <h2>About Tech World</h2>
+            <p>Tech World is dedicated to providing the latest technology news, in-depth product reviews, and cutting-edge insights into the tech industry.</p>
+        </div>
     </section>
 
     <section id="contact">
-        <h2>Contact</h2>
-        <p>Have questions? Want to discuss a new product or technology? Get in touch with us!</p>
-        <p>Email us at: <a href="mailto:info@techworld.com">info@techworld.com</a></p>
+        <div class="container">
+            <h2>Contact Us</h2>
+            <p>Have questions? Want to collaborate? Reach out to us!</p>
+            <p>Email: <a href="mailto:info@techworld.com">info@techworld.com</a></p>
+        </div>
     </section>
 
     <footer>
